dhall/tests/type-inference/failure/unit/MergeUnusedHandler.txt
Type error: error: MergeHandlerMissingVariant
 --> <current file>:1:1
  |
1 | merge { x = 1, y = 2 } < x >.x
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ MergeHandlerMissingVariant
  |
